couchbase-lite/3.0/objc/gs-install.md
---
title: Installation - Couchbase Lite on Objective-C
description: Installing Couchbase Lite on Objective-C
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-couchbase-lite/edit/release/3.0/modules/objc/pages/gs-install.adoc
  xref: xref:3.0@couchbase-lite:objc:gs-install.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/couchbase-lite/3.0/objc/gs-install.html)

# Installation - Couchbase Lite on Objective-C

> Description — _Installing Couchbase Lite on Objective-C_  

## [](#get-started)Get Started

Create or open an existing _Xcode_ project and install _Couchbase Lite 3.0.15_ using one of the [Install Methods](#lbl-install-tabs) methods shown.

> [!NOTE]
> Couchbase Lite is distributed as an xcframework, to support this:
> 
> * The minimum required Cocoapods version is **1.9**
> * The minimum required Carthage version is **38.0**

### [](#lbl-install-tabs)Install Methods

* Direct Download
* Carthage
* CocoaPods

* Get the binary download here — [Extend with Mobile](https://www.couchbase.com/downloads#extend-with-mobile).
* Unpack the download
* Within Finder, Drag **CouchbaseLite.xcframework** to the Xcode navigator.
* Click on **Project** **General** **Embedded Binary** and add **CouchbaseLite.xcframework** to this section.
* Import the xcframework and start using it in your project.  
```objc  
#include <CouchbaseLite/CouchbaseLite.h>  
...  
```

> [!NOTE]
> The minimum required version of Carthage is **38.0**

1. [Install Carthage](https://github.com/Carthage/Carthage#installing-carthage)
2. In your **Cartfile**, add the following.  
Couchbase Lite Community Edition  
```ruby  
binary "https://packages.couchbase.com/releases/couchbase-lite-ios/carthage/CouchbaseLite-Community.json" ~> 3.0.15  
```  
Couchbase Lite Enterprise Edition  
```ruby  
binary "https://packages.couchbase.com/releases/couchbase-lite-ios/carthage/CouchbaseLite-Enterprise.json" ~> 3.0.15  
```
3. Run `carthage update --platform ios`.
4. Drag **CouchbaseLite.xcframework** from **Carthage/Build/** to the Xcode navigator.
5. Click on Project > General > Embedded Binary and add **CouchbaseLite.xcframework** to this section.

> [!NOTE]
> The minimum required version of Cocoapods is **1.9**

1. [Install Cocoapods](https://guides.cocoapods.org/using/getting-started.html)
2. In your **Podfile**, add the following.  
Couchbase Lite Community Edition  
```ruby  
target '<your target name>' do  
  use_frameworks!  
  pod 'CouchbaseLite', '3.0.15'  
end  
```  
Couchbase Lite Enterprise Edition  
```ruby  
target '<your target name>' do  
  use_frameworks!  
  pod 'CouchbaseLite-Enterprise', '3.0.15'  
end  
```
3. Install the pods and open the .xcworkspace file generated by Cocoapods.  
```bash  
pod install  
```

## [](#related-content)Related Content

###### [](#)

How to . . .

* [Prerequisites](gs-prereqs.md)
* [Install](gs-install.md)
* [Build and Run](gs-build.md)

###### [](#-2)

Learn more . . .

* [Databases](database.md)
* [Documents](document.md)
* [Blobs](blob.md)
* [Remote Sync Gateway](replication.md)
* [Handling Data Conflicts](conflict.md)

###### [](#-3)

Dive Deeper . . .

[Mobile Forum](https://forums.couchbase.com/c/mobile/14) | [Blog](https://blog.couchbase.com/) | [Tutorials](https://docs.couchbase.com/tutorials/)