couchbase-lite/3.2/objc/gs-install.md
[View original HTML](/couchbase-lite/3.2/objc/gs-install.html)

> Description — _Installing Couchbase Lite on Objective-C_  

## [](#get-started)Get Started

Create or open an existing _Xcode_ project and install \_Couchbase Lite 3.2.4 using one of the [Install Couchbase Lite](#lbl-install-tabs) methods shown.

Enterprise users can also download the Couchbase Lite Vector Search extension library.

|  | Couchbase Lite is distributed as an xcframework, to support this: The minimum required Cocoapods version is **1.15** The minimum required Carthage version is **0.38** |
|  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- |

### [](#lbl-install-tabs)Install Couchbase Lite

|  | There is no Carthage support for the 3.2.0 Beta version of Couchbase Lite. |
|  | -------------------------------------------------------------------------- |

* Direct Download
* Carthage
* CocoaPods

1. Download the binaries from here — [Extend with Mobile](https://www.couchbase.com/downloads#extend-with-mobile).
2. Unpack the download zip file into your XCode project location.
3. Select your target settings in XCode and drag **CouchbaseLite.xcframework** from your Finder to the **Frameworks, Libraries, and Embedded Content** section.

  * Import the xcframework and start using it in your project.  
  ```objc  
  #include <CouchbaseLite/CouchbaseLite.h>  
  ...  
  ```

|  | The minimum required version of Carthage is **38.0** |
|  | ---------------------------------------------------- |

1. [Install Carthage](https://github.com/Carthage/Carthage#installing-carthage)
2. In your **Cartfile**, add the following.  
Couchbase Lite Community Edition  
```ruby  
binary "https://packages.couchbase.com/releases/couchbase-lite-ios/carthage/CouchbaseLite-Community.json" ~> 3.2.4  
```  
Couchbase Lite Enterprise Edition  
```ruby  
binary "https://packages.couchbase.com/releases/couchbase-lite-ios/carthage/CouchbaseLite-Enterprise.json" ~> 3.2.4  
```
3. Run `carthage update --platform ios`.
4. Drag **CouchbaseLite.xcframework** from **Carthage/Build/** to the Xcode navigator.
5. Click on Project > General > Embedded Binary and add **CouchbaseLite.xcframework** to this section.

|  | The minimum required version of Cocoapods is **1.15** |
|  | ----------------------------------------------------- |

1. [Install Cocoapods](https://guides.cocoapods.org/using/getting-started.html)
2. In your **Podfile**, add the following.  
Couchbase Lite Community Edition  
```ruby  
target '<your target name>' do  
  use_frameworks!  
  pod 'CouchbaseLite', '3.2.4'  
end  
```  
Couchbase Lite Enterprise Edition  
```ruby  
target '<your target name>' do  
  use_frameworks!  
  pod 'CouchbaseLite-Enterprise', '3.2.4'  
end  
```
3. Install the pods and open the .xcworkspace file generated by Cocoapods.  
```bash  
pod install  
```

## [](#install-vector-search-extension)Install Vector Search Extension

|  | Vector Search is an **Enterprise-only** feature. |
|  | ------------------------------------------------ |

You can get set up with the Vector Search Extension for iOS (Objective-C) by following these instructions.

|  | To use Vector Search, you must have Couchbase Lite installed and add the Vector Search extension to your Couchbase Lite application. There is no Carthage support for the beta release of Vector Search. Vector Search is available only for 64-bit architectures and Intel processors that support the Advanced Vector Extensions 2 (AVX2) instruction set. To verify whether your device supports the AVX2 instructions set, [follow these instructions.](https://www.intel.com/content/www/us/en/support/articles/000090473/processors/intel-core-processors.html) |
|  | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |

* Direct Download
* Carthage
* CocoaPods

1. Download the binaries from here — [binary download link.](https://packages.couchbase.com/releases/couchbase-lite-vector-search/1.0.0/couchbase-lite-vector-search%5Fxcframework%5F1.0.0.zip)
2. Unpack the download zip file into your XCode project location.
3. Select your target settings in XCode and drag **CouchbaseLiteVectorSearch.xcframework** from your Finder to the **Frameworks, Libraries, and Embedded Content** section.
4. Start using Couchbase Lite Vector Search on Swift in your project.

|  | The minimum required version of Carthage is **38.0** |
|  | ---------------------------------------------------- |

1. [Install Carthage](https://github.com/Carthage/Carthage#installing-carthage)
2. In your **Cartfile**, add the following.  
Couchbase Lite Enterprise Edition  
```ruby  
binary "http://packages.couchbase.com/releases/couchbase-lite-vector-search/carthage/CouchbaseLiteVectorSearch.json" ~> 1.0.0  
```
3. Run `carthage update --platform ios`.
4. Drag **CouchbaseLite.xcframework** from **Carthage/Build/** to the Xcode navigator.
5. Click on Project > General > Embedded Binary and add **CouchbaseLite.xcframework** to this section.

|  | The minimum required Cocoapods version is **1.15** |
|  | -------------------------------------------------- |

1. Install CocoaPods using the instructions here:  
<https://guides.cocoapods.org/using/getting-started.html>
2. Add one of these targets to your **Podfile**:  
Couchbase Lite Enterprise Edition  
```ruby  
target 'Example' do  
  use_frameworks!  
  pod 'CouchbaseLiteVectorSearch', '1.0.0' (1)  
end  
```

| **1** | Specify the required version number, here we use the latest version |
| ----- | ------------------------------------------------------------------- |
3. Install the pods and open the `.xcworkspace` file generated by CocoaPods, using:  
```bash  
pod install  
```

## [](#related-content)Related Content

###### [](#)

How to . . .

* [Prerequisites](gs-prereqs.md)
* [Install](gs-install.md)
* [Build and Run](gs-build.md)

.

###### [](#-2)

Learn more . . .

* [Databases](database.md)
* [Documents](document.md)
* [Blobs](blob.md)
* [Remote Sync Gateway](replication.md)
* [Handling Data Conflicts](conflict.md)

.

###### [](#-3)

Dive Deeper . . .

[Mobile Forum](https://forums.couchbase.com/c/mobile/14) | [Blog](https://blog.couchbase.com/) | [Tutorials](https://docs.couchbase.com/tutorials/)

.